# c_projects_demo

./: push.sh
load_c_from_python/numpy/: call_c.py  test.cpp
load_c_from_python/opencv/: CMakeLists.txt  README.md  call_c.py  cffi_.py  generate_random_image.cpp
load_c_from_python/opencv/c/: CMakeLists.txt  main.c
